# pykinect-recorder

./: .gitignore  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST  README.md  dataset_list.txt  main.py  main.spec  metadata.csv  pyproject.toml  record_with_mic.py  requirements.txt  setup.py  split_data.py  test.py
.github/workflows/: publish.yml
docs/: conf.py  requirements.txt
docs/source/: conf.py  index.rst  k4a.rst  k4abt.rst  k4arecord.rst  pyk4a.rst  pyrealsense.rst
docs/source/k4a/: calibration.rst
examples/: exampleBodyTrackingLiteModel.py  exampleColorImage.py  examplePointCloud.py  exampleSmoothDepthImage.py  exampleTransformColorToDepth.py  exampleTransformDepthToColor.py  example_body_segmentation.py  example_body_tracking.py  example_body_tracking_color_camera.py  example_body_tracking_lite_model.py  example_body_tracking_transformation_comparison.py  example_color_point_cloud.py  example_depth_image.py  example_infrared_image.py  example_playback.py  example_playback_body_tracker.py  example_pyside_audio.py  example_real_time_imu.py  example_recording.py  example_smooth_depth_image.py  example_transform_color_to_depth.py  example_transform_depth_to_color.py  example_transform_point2d_to_3d.py
main/: __init__.py  logger.py
main/_pyk4a/: __init__.py  pykinect.py
main/_pyk4a/k4a/: _k4a.py  _k4atypes.py  calibration.py  capture.py  configuration.py  device.py  imu_sample.py  transformation.py
main/_pyk4a/k4arecord/: datablock.py  playback.py  record.py  record_configuration.py
pykinect_recoder/: main_window.py  old_record_video.py  record_video.py
pykinect_recorder/: README.md  __init__.py  main_window.py  old_record_video.py  record_audio.py  record_video.py  synology_utils.py
pykinect_recorder/cli/: command.py
pykinect_recorder/dev/: record_sensors.py
pykinect_recorder/lib/k4a/: _k4a.py  _k4atypes.py  calibration.py  configuration.py  device.py  image.py
pykinect_recorder/lib/k4abt/: __init__.py  _k4abt.py  _k4abtTypes.py  body2d.py  tracker.py
pykinect_recorder/lib/k4arecord/: __init__.py  _k4arecord.py  _k4arecordTypes.py  datablock.py  playback.py
pykinect_recorder/lib/utils/: __init__.py  postProcessing.py
pykinect_recorder/main/: __init__.py  old_record_video.py  playback_sensors.py  pyk4a_thread.py  record_audio.py  record_video.py  split_data.py
pykinect_recorder/main/_pyk4a/: __init__.py  pykinect.py
pykinect_recorder/main/cli/: command.py
pykinect_recorder/main/pyk4a/: __init__.py
pykinect_recorder/pyk4a/: __init__.py  logger.py  synology_utils.py  utils.py
pykinect_recorder/pyk4a/k4a/: _k4a.py  _k4atypes.py  calibration.py  capture.py  device.py  imu_sample.py
pykinect_recorder/pyk4a/k4abt/: _k4abt.py  _k4abtTypes.py
pykinect_recorder/pyk4a/k4arecord/: _k4arecord.py  _k4arecordTypes.py  playback.py  record.py
pykinect_recorder/pyk4a/utils/: utils.py
pykinect_recorder/renderer/: __init__.py  common_widgets.py  logger.py  main_window.py  signals.py  split_data.py  utils.py
pykinect_recorder/renderer/components/: asidebar.py  audio_viewer.py  (+31 more)
renderer/: __init__.py  main_window.py
renderer/components/: custom_buttons.py  pyk4a_thread.py  recordview.py  sensor_viewer.py  sidebar.py  slider.stylesheet  toolbar.py
src/: __init__.py
src/pykinect_recorder/: __init__.py
tests/: test_ctype_types.py  test_dependency.py
(+48 files in other folders)
